--- a/Store.html
+++ b/Store.html
@@ -162,7 +162,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><a style="text-decoration: none;" href="BookStore.html">NextReads</a></div>
+        <div class="logo"><a style="text-decoration: none;" href="index.html">NextReads</a></div>
         <div>
             <a style="text-decoration: none;" href="Store.html">Store</a>
             <select id="categories">
